plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'co'
version = '0.0.1-SNAPSHOT'
description = 'TodoTech'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // PARA CARGAR .env
    implementation 'io.github.cdimascio:dotenv-java:3.0.2'

    // NUEVA DEPENDENCIA: Spring Mail
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // NUEVAS DEPENDENCIAS: Spring Retry
    implementation 'org.springframework.retry:spring-retry:2.0.12'
    implementation 'org.springframework:spring-aspects:6.2.5'

    // JWT Auth0 - PARA TOKENS JWT
    implementation 'com.auth0:java-jwt:4.4.0'

    // MapStruct
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Integración Lombok + MapStruct (CRUCIAL)
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    runtimeOnly 'org.postgresql:postgresql'

    // TEST DEPENDENCIES - AÑADIDAS
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0' // ← NUEVA
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2' // ← NUEVA

    // Lombok para tests - CRUCIAL para @InjectMocks
    testCompileOnly 'org.projectlombok:lombok' // ← NUEVA
    testAnnotationProcessor 'org.projectlombok:lombok' // ← NUEVA

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2' // ← NUEVA
}

// Configuración para que MapStruct funcione correctamente con Lombok
tasks.withType(JavaCompile) {
    options.compilerArgs = [
            '-Amapstruct.suppressGeneratorTimestamp=true',
            '-Amapstruct.defaultComponentModel=spring',
            '-Amapstruct.unmappedTargetPolicy=IGNORE'
    ]
}

// Configuración para tests
tasks.named('test') {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

// Agrega esto al final del build.gradle
processResources {
    from('.') {
        include '.env'
        into 'resources'
    }
}

bootRun {
    // Pasar propiedades del sistema a la aplicación
    systemProperties System.properties
}

// Para limpiar y reconstruir completamente
tasks.named('clean') {
    doLast {
        delete 'build'
        delete 'out'
    }
}